--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -4,7 +4,6 @@
     }
     .card{
         max-width: 90% ;
-        height: 500px;
     }
   
 }
@@ -18,6 +17,9 @@
     }
     .jumbotron {
         background: url('./images/hero-image_4-medium.jpg') repeat center center;
+    }
+    .card-addReview .body {
+        margin: 0 30px;
     }
 }
 
@@ -86,5 +88,9 @@
 
     .detail-container .review-container .review-item{
         padding: 10px;   
+    }
+
+    .card-addReview .body {
+        margin: 0 20px;
     }
 }
